--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>net.foxgenesis.watame</groupId>
-		<artifactId>Watamebot</artifactId>
-		<version>1.0.0</version>
-		<relativePath>../WatameBot/pom.xml</relativePath>
-	</parent>
 	<groupId>net.foxgenesis.max0r</groupId>
 	<artifactId>max0r-custom-plugin</artifactId>
 	<version>0.0.1</version>
+	<dependencies>
+		<dependency>
+			<groupId>net.foxgenesis.watame</groupId>
+			<artifactId>watamebot</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
+	</dependencies>
 </project>
