--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,10 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>net.foxgenesis.max0r</groupId>
 	<artifactId>max0r-custom-plugin</artifactId>
-	<version>0.0.1</version>
+	<version>1.0.7</version>
 	<properties>
 		<project.build.sourceEncoding>ASCII</project.build.sourceEncoding>
 	</properties>
@@ -10,7 +12,7 @@
 		<dependency>
 			<groupId>net.foxgenesis.watame</groupId>
 			<artifactId>watamebot</artifactId>
-			<version>1.0.7</version>
+			<version>1.1.0</version>
 		</dependency>
 	</dependencies>
 	<build>
