added random cat pictures

--- a/assets/plugin.properties
+++ b/assets/plugin.properties
@@ -3,5 +3,5 @@ friendlyName=Max0r Custom
 version=1.0.1
 description=A custom made plugin for Max0r
 author=Ashley
-providesCommands=false
+providesCommands=true
 needsDatabase=false
